# Bluetooth_Maids_Bell

./: .gitignore  README.md
bmb_receiver_raspberry_pi/: Cargo.toml  README.md
bmb_receiver_raspberry_pi/src/: main.rs
bmb_receiver_stm32f401/: Cargo.toml  README.md  memory.x
bmb_receiver_stm32f401/src/: main.rs
bmb_sender_stm32f3/: Cargo.toml  README.md
bmb_sender_stm32f3/.cargo/: config
bmb_sender_stm32f3/src/: main.rs
bmb_sender_stm32f401/: Cargo.toml  README.md
bmb_sender_stm32f401/src/: main.rs
