[package]
name = "bmb_sender_stm32f3"
version = "0.1.0"
authors = ["coffeyrt <coffeyrt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f3xx-hal = {version = "0.5.0", features = ["stm32f303xc"]}
# stm32f3 = {version = "0.12", features = ["stm32f303", "rt"]}
cortex-m-rt = "0.6"

[profile.release]
opt-level = 'z'
