[package]
name = "bmb_sender_stm32f3"
version = "0.2.0"
authors = ["coffeyrt <coffeyrt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rtic = "0.5"
panic-itm = "0.4"
panic-abort = "0.3"
stm32f3xx-hal = {version = "0.5.0", features = ["stm32f303xc", "rt"]}

[profile.dev]
opt-level = 's'
lto = true

[profile.release]
opt-level = 'z'
lto = true
test = false
debug = false
